# pymc-experimental

./: .buildinfo  .gitattributes  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  api_reference.html  codecov.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  versioneer.py
.doctrees/: api_reference.doctree  environment.pickle  index.doctree
.github/workflows/: pre-commit.yml  pypi.yml  release.yml  test.yml
_modules/: index.html
_modules/pymc_experimental/bart/: bart.html  pgbart.html  utils.html
conda-envs/: environment-test-py38.yml  environment-test-py39.yml  environment-test.yml  windows-environment-test-py39.yml  windows-environment-test.yml
docs/: Makefile  api_reference.rst  conf.py  index.rst  statespace.rst
docs/_templates/autosummary/: class.rst
docs/source/: conf.py  index.rst
docs/statespace/: core.rst  filters.rst  models.rst
docs/statespace/models/: structural.rst
notebooks/: ARMA Example.ipynb  Custom SSM - Daily Seasonality.ipynb  Exponential Trend Smoothing.ipynb  Making a Custom Statespace Model.ipynb  Nile Local Level Model.ipynb  VARMAX Example.ipynb  dirichlet-process-numpy.ipynb  dirichlet-process-pymc.ipynb  dirichlet-process.ipynb  discrete_markov_chain.ipynb  dp-posterior-numpy.ipynb  example2.py  gpjax-ssgp-port.ipynb  latent_approx.ipynb  marginalized_changepoint_model.ipynb  modelbuilder_example.ipynb  modular_models.ipynb  statespace.ipynb
pymc_experimental/: __init__.py  _version.py  bayesian_estimator_linearmodel.py  linearmodel.py  marginal_model.py  model_builder.py  model_transform.py  version.py  version.txt
pymc_experimental/approximations/: __init__.py
pymc_experimental/bart/: __init__.py  bart.py  pgbart.py  tree.py  utils.py
pymc_experimental/distributions/: Updates.docx  __init__.py  continuous.py  discrete.py  dist_math.py  genextreme.py  histogram_utils.py  multivariate.py  multivatiate.py  mvncdf.py  timeseries.py
pymc_experimental/distributions/multivariate/: __init__.py  laplace.py  r2d2m2cp.py
pymc_experimental/dp/: __init__.py  dp.py
pymc_experimental/gp/: GPs from scratch.ipynb  __init__.py  hsgp.py  latent_approx.py  mogp.py  pytensor_gp.py  spline.py  util.py
pymc_experimental/inference/: __init__.py  find_map.py  fit.py  jax_find_map.py  laplace.py  lbfgs.py  pathfinder.py  quadratic.py
pymc_experimental/inference/from_blackjax/: kernels.py  sampling.py
pymc_experimental/inference/pathfinder/: __init__.py  importance_sampling.py  lbfgs.py  pathfinder.py
pymc_experimental/inference/smc/: sampling.py
pymc_experimental/model/: marginal_model.py  model_api.py
pymc_experimental/model/marginal/: distributions.py  graph_analysis.py  marginal_model.py
pymc_experimental/model/modular/: __init__.py  components.py  likelihood.py  utilities.py
pymc_experimental/model/transforms/: autoreparam.py
pymc_experimental/model_transform/: basic.py  conditioning.py  predict.py
pymc_experimental/preprocessing/: standard_scaler.py
pymc_experimental/sampling/: mcmc.py
pymc_experimental/sampling/optimizations/: __init__.py  conjugacy.py  conjugate_sampler.py  optimize.py  summary_stats.py
pymc_experimental/statespace/: __init__.py
pymc_experimental/statespace/core/: __init__.py  representation.py  statespace.py
pymc_experimental/statespace/filters/: __init__.py  distributions.py  kalman_filter.py  kalman_smoother.py  numpy_filter.py  utilities.py
pymc_experimental/statespace/models/: ETS.py  SARIMAX.py  VARMAX.py  __init__.py  local_level.py  structural.py  utilities.py
pymc_experimental/statespace/utils/: __init__.py  compile.py  constants.py  data_tools.py  numba_linalg.py  pytensor_scipy.py  simulation.py
pymc_experimental/step_methods/: __init__.py  mlda.py  rjmcmc.py
pymc_experimental/tests/: custom_rjmcmc_sketch.py  test_bart.py  test_bayesian_estimator_linearmodel.py  test_blackjax_smc.py  test_distributions.py  test_distributions_moments.py  test_distributions_random.py  test_histogram_approximation.py  test_histogram_trick.py  test_histogram_utils.py  test_laplace.py  test_linearmodel.py  test_marginal_model.py  test_mlda.py  test_model_builder.py  test_model_transform.py  test_pathfinder.py  test_pivoted_cholesky.py  test_prior_from_trace.py  test_quadratic.py  test_splines.py  utils.py
pymc_experimental/tests/distributions/: test_continuous.py  test_discrete.py  test_discrete_markov_chain.py  test_multivariate.py
pymc_experimental/tests/model/: test_model_api.py  (+1 more)
pymc_experimental/tricks/: histogram.py
pymc_experimental/utils/: __init__.py  autoreparam.py  cache.py  hierarchy.py  histogram_trick.py  histogram_utils.py  linear_cg.py  model_equivalence.py  model_fgraph.py  ofg.py  pivoted_cholesky.py  prior.py  pytensorf.py  spline.py
pymc_extras/: __init__.py  linearmodel.py  model_builder.py  printing.py
pymc_extras/distributions/: __init__.py  continuous.py  discrete.py  histogram_utils.py  timeseries.py
pymc_extras/gp/: __init__.py  latent_approx.py
pymc_extras/inference/: __init__.py  fit.py  laplace.py  pathfinder.py
pymc_extras/model/: model_api.py
pymc_extras/statespace/: __init__.py
pymc_extras/utils/: __init__.py  linear_cg.py  pivoted_cholesky.py  prior.py
tests/: __init__.py  test_blackjax_smc.py  test_find_map.py  test_gp.py  test_histogram_approximation.py  test_jax_find_map.py  test_laplace.py  test_linearmodel.py  test_model_builder.py  test_pathfinder.py  test_printing.py  test_prior_from_trace.py  test_splines.py  utils.py
tests/distributions/: __init__.py  test_continuous.py  test_discrete.py  test_discrete_markov_chain.py  test_multivariate.py
tests/model/: test_marginal_model.py  test_model_api.py
tests/statespace/: test_ETS.py  test_SARIMAX.py  test_VARMAX.py  test_coord_assignment.py  test_distributions.py  test_kalman_filter.py  test_representation.py  test_statespace.py  test_statespace_JAX.py  test_structural.py
(+60 files in other folders)
